@@ -8,7 +8,7 @@ Description: annmap provides annotation mappings for Affymetrix exon arrays and
              functions such as genesInRange(), geneToExon(), exonDetails(),
              etc. Functions to plot gene architecture and BAM file data are
              also provided. Underlying data are from Ensembl.
-Version: 1.3.0
+Version: 1.3.1
 Date:        2011-09-14
 Author:      Tim Yates <tyates@picr.man.ac.uk>
 Maintainer:  Tim Yates <tyates@picr.man.ac.uk>
